fix tablet spacing

--- a/src/less/post-page.less
+++ b/src/less/post-page.less
@@ -917,7 +917,7 @@ div.caption {
    @media @tablet {
       font-size: @fontSize + 3;
       p {
-         padding: 0 1.5em 1em 2em;
+         padding: 0 1.5em 0.3em 2em;
       }
    }
 }
